spring boot/k8s/auth-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - port: 9000
      targetPort: 9000
  type: ClusterIP
