spring boot/k8s/inventory-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  labels:
    app: inventory-service
spec:
  selector:
    app: inventory-service
  ports:
    - port: 8086
      targetPort: 8086
  type: ClusterIP
