spring boot/k8s/order-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  selector:
    app: order-service
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
