spring boot/k8s/payment-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: payment-service
spec:
  selector:
    app: payment-service
  ports:
    - port: 8084
      targetPort: 8084
  type: ClusterIP
