spring boot/k8s/review-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: review-service
  labels:
    app: review-service
spec:
  selector:
    app: review-service
  ports:
    - port: 8087
      targetPort: 8087
  type: ClusterIP
